Task 4: Multi-page website using HTML and CSS

--- a/about.html
+++ b/about.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Home | Rani</title>
+  <title>About</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <header class="header">
-  <h1>Rani Sumananjali</h1>
+  <h1>Rani Sumnanjali</h1>
   <p>Frontend Developer</p>
 
   <nav class="nav">
-    <a href="index.html" class="active">Home</a>
-    <a href="about.html">About</a>
+    <a href="index.html">Home</a>
+    <a href="about.html" class="active">About</a>
     <a href="education.html">Education</a>
     <a href="skills.html">Skills</a>
     <a href="contact.html">Contact</a>
@@ -22,13 +21,15 @@
 
 <main class="container">
   <section class="card">
-    <h2>Welcome</h2>
-    <p>This is my multi-page website built using HTML & CSS.</p>
+    <h2>About Me</h2>
+    <img src="images/profile.jpg">
+    <p>I am a passionate Frontend Developer and React Intern.<br>
+    I love building user-friendly and responsive web interfaces.</p>
   </section>
 </main>
 
 <footer class="footer">
-  <p>© 2026 Rani Sumananjali</p>
+  <p>© 2026 Rani Sumnanjali</p>
 </footer>
 
 </body>
