--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Home | Rani</title>
+  <title>Contact</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <header class="header">
-  <h1>Rani Sumananjali</h1>
+  <h1>Rani Sumnanjali</h1>
   <p>Frontend Developer</p>
 
   <nav class="nav">
-    <a href="index.html" class="active">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="education.html">Education</a>
     <a href="skills.html">Skills</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html" class="active">Contact</a>
   </nav>
 </header>
 
 <main class="container">
   <section class="card">
-    <h2>Welcome</h2>
-    <p>This is my multi-page website built using HTML & CSS.</p>
+    <h2>Contact</h2>
+    <p>Email: sumnanjali34@gmail.com</p>
+    <p>Location: Indore,MP,India</p>
   </section>
 </main>
 
 <footer class="footer">
-  <p>© 2026 Rani Sumananjali</p>
+  <p>© 2026 Rani Sumnanjali</p>
 </footer>
 
 </body>
