--- a/education.html
+++ b/education.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Home | Rani</title>
+  <title>Education</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <header class="header">
-  <h1>Rani Sumananjali</h1>
+  <h1>Rani Sumnanjali</h1>
   <p>Frontend Developer</p>
 
   <nav class="nav">
-    <a href="index.html" class="active">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="education.html">Education</a>
+    <a href="education.html" class="active">Education</a>
     <a href="skills.html">Skills</a>
     <a href="contact.html">Contact</a>
   </nav>
@@ -22,13 +21,15 @@
 
 <main class="container">
   <section class="card">
-    <h2>Welcome</h2>
-    <p>This is my multi-page website built using HTML & CSS.</p>
+    <h2>Education</h2>
+    <p>MCA</p>
+    <p>LNCT Group of Colleges, Bhopal</p>
+    <p>2023 – 2025</p>
   </section>
 </main>
 
 <footer class="footer">
-  <p>© 2026 Rani Sumananjali</p>
+  <p>© 2026 Rani Sumnanjali</p>
 </footer>
 
 </body>
