Update home page content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <header class="header">
-  <h1>Rani Sumananjali</h1>
+  <h1>Rani Sumnanjali</h1>
   <p>Frontend Developer</p>
 
   <nav class="nav">
